--- a/index.css
+++ b/index.css
@@ -2,6 +2,18 @@ body {
   background: #fcf007;
 }
 
+header {
+  height: 50px;
+  width: 100%;
+  background-color: rgb(128, 196, 196);
+  position: fixed;
+}
+
+main {
+  background: #fcf007;
+  height: 750px;
+}
+
 .caja {
   border: 3px solid black;
   width: 254px;
@@ -34,4 +46,14 @@ input {
   text-align: center;
   justify-content: center;
   font-size: 10px;
+}
+
+footer {
+  height: 40px;
+  background-color: black;
+  color: white;
+}
+
+.pie {
+  font-size: 20px;
 }
